css: fix welcome image overflow on style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,9 +49,16 @@ html {
 .img-container {
     display: flex;
     justify-content: end;
+    overflow: hidden;
+    height: 400px; 
+    width: 100%;
+    
 }
 img {
     border-radius: 3px;
+    object-fit:cover;
+    max-height:100%; 
+    max-width: 100%;
 }
 
 p {
@@ -180,15 +187,15 @@ header {
 }
 
 /* welcome section */
-.container {
+.welcome-container {
     display: flex;
     align-items: start;
     width: 100%;
 }
-.right {
+.welcome-right-text {
     flex: 50%;
 }
-.left {
+.welcome-left-img {
     flex: 50%;
 }
 
